[package]
name = "storm"
version = "0.4.2"
authors = ["Geoff Clements <ro2kz0@gmail.com>"]
readme = "README.md"
license = "MIT"
description = "A Headless Client for Logitec Media Server"
homepage = "https://github.com/GeoffClements/Storm"
repository = "https://github.com/GeoffClements/Storm"

[dependencies]
log = "0.4"
fern = "0.5"
tokio-core = "0.1"
tokio-timer = "0.2"
tokio-codec = "0.1"
tokio-io = "0.1"
tokio-tcp = "0.1"
tokio-signal = "0.2"
futures = "0.1"
bytes = "0.4"
mac_address = "1.0"
gstreamer = "0.14"
thread-control = "0.1"
regex = "1.2"

[dependencies.clap]
version = "2.33"
default-features = false
features = ["wrap_help"]

[dependencies.actix]
version = "0.8"
default-features = false
